<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="br.com.daciosoftware.meumapa.MainActivity" >

	<item
		android:id="@+id/action_gravar_local"
		android:orderInCategory="100"
		android:icon="@drawable/ic_save"
		android:title="@string/action_gravar_local"
		app:showAsAction="ifRoom"/>

	<item
		android:id="@+id/action_registrar_local"
		android:orderInCategory="101"
		android:icon="@drawable/ic_plus"
		android:title="@string/action_registrar_local"
		app:showAsAction="ifRoom"/>
	
	<item
		android:id="@+id/action_listar_locais"
		android:orderInCategory="102"
		android:title="@string/action_listar_locais"
		android:icon="@drawable/ic_list"
		app:showAsAction="ifRoom"/>
	
	<item
		android:id="@+id/action_sair"
		android:orderInCategory="103"
		android:icon="@drawable/ic_close"
		android:title="@string/action_sair"
		app:showAsAction="never"/>
		
</menu>
